<resources>
    <string name="app_name">Video Meeting</string>
    <string name="welcome_to">Welcome To</string>
    <string name="video_meeting_conference_app">Video Meeting | Conference App</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email">Email</string>
    <string name="you_gmail_com">you@gmail.com</string>
    <string name="password">Password</string>
    <string name="u2022_u2022_u2022_u2022_u2022_u2022">• • • • • •</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="we_need_a_few_details_to_get_your_account_ready">We need a few details to get your account ready</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="doe">Doe</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="john">John</string>
    <string name="sign_out">Sign out</string>
    <string name="muhammad_usama">Muhammad Usama</string>
    <string name="muhammad">Muhammad</string>
    <string name="no_user_available">No user available</string>
    <string name="a">A</string>
    <string name="incoming_meeting_invitation">Incoming meeting invitation</string>
    <string name="sending_meeting_invitation">Sending meeting invitation</string>
</resources>